--- a/torch/torch.Rmd
+++ b/torch/torch.Rmd
@@ -837,7 +837,7 @@ With `luz`, the overall flow looks a lot like in `keras`:
 
 3.  You train it using `fit()`, passing in the training and (optionally) validation data, as well as the number of epochs to train for and a set of callbacks (both optional).
 
-### End-to-end example: MNIST 
+### End-to-end example: MNIST
 
 #### Data
 
@@ -847,7 +847,7 @@ In `torch` , data is fed to a network using `dataset`s and `dataloaders`. Their 
 
 -   `dataloader`: Feed the data to the model. Normally, this happens in *batches* of configurable size. Optionally, a `dataloader` may shuffle the data, and arrange for parallelization over a subset of available processors.
 
-Here, we make use of the famou MNIST `dataset` provided by `torchvision` .
+Here, we make use of the famous MNIST `dataset` provided by `torchvision` .
 
 The dataset will be downloaded and prepared the first time it is requested (unless it exists in the specified location already). Below, this happens when creating the training set. When we instantiate the validation set, no download will take place.
 
@@ -884,6 +884,12 @@ length(train_ds)
 length(valid_ds)
 ```
 
+We can use indexing to inspect individual (x,y) pairs:
+
+```{r}
+train_ds[1]
+```
+
 Now, we create the respective `dataloader`s.
 
 ```{r}
@@ -891,7 +897,7 @@ train_dl <- dataloader(train_ds, batch_size = 32, shuffle = TRUE)
 valid_dl <- dataloader(valid_ds, batch_size = 32, shuffle = FALSE)
 ```
 
-With dataloaders, `length()` indicates the number of *batches*:
+With `dataloader`s, `length()` indicates the number of *batches*:
 
 ```{r}
 length(train_dl)
